--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -2,22 +2,35 @@
 title: Welcome to Middleman
 ---
 
-<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 400 340" class="middleman-logo" aria-labelledby="middleman-logo__title" role="img">
-  <title id="middleman-logo__title">Middleman</title>
-  <path class="middleman-logo__top-left-bar" fill-opacity=".45" d="M0 40L200 0v30L0 60z"/>
-  <path class="middleman-logo__top-right-bar" fill="#fff" d="M200 0l200 40v20L200 30z"/>
-  <path class="middleman-logo__left-m" fill-opacity=".45" d="M0 78v184l45 5V152l45 83 47-83v129l53 7V52l-57 8-43 83-43-70z"/>
-  <path class="middleman-logo__right-m" fill="#fff" d="M400 78v184l-45 5V152l-45 83-47-83v129l-53 7V52l57 8 43 83 43-70z"/>
-  <path class="middleman-logo__bottom-left-bar" fill-opacity=".45" d="M0 300l200 40v-30L0 280z"/>
-  <path class="middleman-logo__bottom-right-bar" fill="#fff" d="M200 340l200-40v-20l-200 30z"/>
-</svg>
+<nav class="navbar">
+  <div class="container">
+    <ul>
+      <li><a  href="contactos.html">Home</a></li>
+      <li><a  href="mapas.html">Work</a></li>
+      <li><a  href="mapas.html">Github</a></li>
+      <li><a  href="www.medium.com" data-modal="about">Blog</a></li>
+    </ul>
+  </div>
+</nav>
 
-<h1>
-  Middleman is Running
-</h1>
+<section class="intro">
+  <h2 class="first-name"> Walter </h2>
+  <h2 class="last-name"> Reyes </h2>
+    <p class="short-bio">
+      I'm a Web & Software Developer based on Monterrey, MX.
+      <br><br>
 
-<%= link_to(
-  "Read Documentation",
-  "https://middlemanapp.com/basics/templating_language/",
-  target: "_blank"
-) %>
+      I develop products focusing on a happy development experience through good team communication, quality code, TDD, a good plan and some <a href="https://en.wikipedia.org/wiki/Flow_(psychology)">Flow</a> time.
+
+      <br/><br/>
+      Some of my work is on <a href="http://www.github.com/walreyes/">Github</a>, sometimes I write interesting things on <a href="https://medium.com/@walreyes">Medium</a> and you can find my full resume on <a href="https://www.linkedin.com/in/walreyes/">Linkedin</a>.
+
+      <br/><br/>
+      I’m always looking forward for collaborations, so feel free to contact me at <a href="mailto:hi@walrey.es" target="_top">hi@walrey.es</a>
+    </p>
+  </div>
+</section>
+
+<script>
+  console.log("What are you in doing here? Reach me at: me@walrey.es")
+</script>
