--- a/source/stylesheets/site.css.scss
+++ b/source/stylesheets/site.css.scss
@@ -1,24 +1,65 @@
+* {
+	margin: 0;
+	padding: 0;
+	-webkit-box-sizing: border-box;
+	        box-sizing: border-box;
+}
+
 body {
-  background-color: #fbc547;
-  color: #333;
-  font-family: -apple-system, BlinkMacSystemFont, "Avenir Next", "Avenir",
-    "Segoe UI", "Lucida Grande", "Helvetica Neue", "Helvetica", "Fira Sans",
-    "Roboto", "Noto", "Droid Sans", "Cantarell", "Oxygen", "Ubuntu",
-    "Franklin Gothic Medium", "Century Gothic", "Liberation Sans", sans-serif;
-  padding: 18vh 1rem;
-  text-align: center;
+	font-size: 16px;
+	font-family: 'Roboto', sans-serif;
+	-webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+  background: white;
+  color:black;
 }
 
 a {
-  color: rgba(#000, 0.7);
-
-  &:focus,
-  &:hover {
-    color: rgba(#000, 0.6);
-  }
+  color: black;
 }
 
-.middleman-logo {
-  margin-bottom: 1rem;
-  width: 10rem;
+
+.navbar {
+  padding-top: 40px;
+  position: fixed;
+  width: 100%;
+  padding-right: 150px;
+}
+
+.navbar .container {
+  width: 100%;
+  display: flex;
+  justify-content: flex-end;
+}
+
+.navbar ul {
+  display: flex;
+  list-style: none;
+}
+
+.navbar ul li {
+  margin-right: 10px;
+}
+
+.intro {
+  width: 100%;
+  height: 100vh;
+  padding: 200px 300px;
+}
+
+.intro .first-name, .intro .last-name {
+  font-size: 100px;
+  font-family: 'Bitter', serif;
+  line-height: 85px;
+}
+
+.intro .last-name{
+  padding-left: 158px;
+}
+
+.intro .short-bio {
+  margin-top: 100px;
+  max-width: 60%;
+  margin-left: 40%;
+  line-height: 20px;
 }
