Fixes missing link to mail hey@walrey.es

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -52,7 +52,7 @@ title: Walter Reyes
          <br><br>
          Some of my work is on <a href="http://www.github.com/walreyes/">Github</a>, sometimes I write interesting things on <a href="https://medium.com/@walreyes">Medium</a> and you can find my full resume on <a href="https://www.linkedin.com/in/walreyes/">Linkedin</a>.
          <br><br>
-         I’m always looking forward for collaborations, so feel free to contact me at <a href="mailto:hey@walrey.es" target="_top">hey@walrey.es</a>
+         I’m always looking forward for collaborations, so feel free to contact me at <a href="mailto:hey@walrey.es">hey@walrey.es</a>
        </p>
      </div>
 
@@ -100,7 +100,7 @@ title: Walter Reyes
        <h3>How to reach me:</h3>
 
        <p>
-         Hit me up at: <a href="mailto:hey@walrey.es" target="_top">hey@walrey.es</a>
+         Hit me up at: <a href="mailto:hey@walrey.es">hey@walrey.es</a>
        </p>
      </div>
    </section>
